# GDDPIntegration

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  about.md  changelog.md  mod.json  support.md
.github/workflows/: main.yml
resources/DP_Fonts/: bevelFont-hd.fnt  bevelFont-uhd.fnt  bevelFont.fnt  blankFont-hd.fnt  blankFont-uhd.fnt  blankFont.fnt  dropshadowFont-hd.fnt  dropshadowFont-uhd.fnt  dropshadowFont.fnt  outlineFont-hd.fnt  outlineFont-uhd.fnt  outlineFont.fnt
resources/DP_Menu/: DP_Recommended.xcf  DP_Roulette.xcf  DP_Search.xcf  DP_demonProgressionBtn.xcf  DP_demonProgressionBtnAlt.xcf
src/: CreatorLayer.cpp  CustomText.cpp  CustomText.hpp  DPAchievementManager.cpp  DPAchievementManager.hpp  DPLayer.cpp  DPLayer.hpp  DPListLayer.cpp  DPListLayer.hpp  DPUtils.cpp  DPUtils.hpp  LevelBrowserLayer.cpp  LevelCell.cpp  LevelInfoLayer.cpp  LevelListLayer.cpp  ListManager.cpp  ListManager.hpp  RecommendedLayer.cpp  RecommendedLayer.hpp  RecommendedUtils.cpp  RecommendedUtils.hpp  RefreshStats.cpp  ResetAchievements.cpp  ResetRanks.cpp  RouletteUtils.cpp  RouletteUtils.hpp  Settings.hpp  StatsPopup.cpp  StatsPopup.hpp  Utils.cpp  Utils.hpp  XPUtils.cpp  XPUtils.hpp  main.cpp
src/hooks/: CreatorLayer.cpp  LevelCell.cpp  LevelInfoLayer.cpp  LevelListLayer.cpp  PlayLayer.cpp
src/menus/: DPLayer.cpp  DPLayer.hpp  DPListLayer.cpp  DPListLayer.hpp  DPPackCell.cpp  DPPackCell.hpp  DPSearchLayer.cpp  DPSearchLayer.hpp  RecommendedLayer.cpp  RecommendedLayer.hpp  RouletteSafeLayer.cpp  RouletteSafeLayer.hpp
src/popups/: NewsPopup.cpp  NewsPopup.hpp  (+14 more)
(+6 files in other folders)
